# ChangeLog for sci-visualization/xd3d
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/xd3d/ChangeLog,v 1.9 2009/12/04 19:05:23 bicatali Exp $

  04 Dec 2009; Sébastien Fabbro <bicatali@gentoo.org> xd3d-8.3.1.ebuild,
  files/xd3d-8.3.1-gentoo.diff, +files/xd3d-8.3.1-parallel.patch,
  +files/xd3d-8.3.1-rotated.patch:
  Fixed parallel building, no more forced stripping, added a missing header
  for QA, removed fortran eclass, switched to EAPI=2

  04 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/gentoo-xd3d-8.2.1.diff, -xd3d-8.2.1.ebuild, xd3d-8.3.1.ebuild:
  QA cleaning. Removed old version (buggy and using icc use flag)

*xd3d-8.3.1 (21 Jan 2008)

  21 Jan 2008; Markus Dittrich <markusle@gentoo.org>
  +files/xd3d-8.3.1-gentoo.diff, +xd3d-8.3.1.ebuild:
  Version bump (fixes bug #155856).

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xd3d-8.2.1.ebuild:
  Drop virtual/x11 references.

  13 Mar 2007; Danny van Dyk <kugelfang@gentoo.org> xd3d-8.2.1.ebuild:
  QA: which -> type -P

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  17 Mar 2006; Markus Rothe <corsair@gentoo.org> xd3d-8.2.1.ebuild:
  Added ~ppc64; bug #126439

  29 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org>
  +files/gentoo-xd3d-8.2.1.diff, +metadata.xml, +xd3d-8.2.1.ebuild:
  Moved from media-gfx/xd3d to sci-visualization/xd3d.

  13 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; xd3d-8.2.1.ebuild:
  Add modular X dependencies.

  25 Jul 2005; David Holm <dholm@gentoo.org> xd3d-8.2.1.ebuild:
  Added to ~ppc.

  27 Jun 2005; Olivier Fisette <ribosome@gentoo.org> xd3d-8.2.1.ebuild:
  Added missing tcsh dependency (bug #73814). Thanks to Bryan Duff.

*xd3d-8.2.1 (23 Dec 2004)

  23 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/gentoo-xd3d-8.2.1.diff, +xd3d-8.2.1.ebuild: