@@ -5,13 +5,13 @@ AUX xd3d-8.3.1-gentoo.diff 1768 RMD160 b889b98a0899a0739e1321d5b26d5b187acf0ab0 
 AUX xd3d-8.3.1-parallel.patch 2209 RMD160 cd4efded9c245614c8b8c5aad08f5217931dc0b6 SHA1 684bd4adca83c8e2fa301c38e2ccf7a94f3f757e SHA256 e338c1e5966fca00b6308cbd20926c4a3f5840082803bbc6ecbc1853c98ad0dd
 AUX xd3d-8.3.1-rotated.patch 242 RMD160 78849d46a6e6442689f84c00cf4fdc24674d871c SHA1 398ff4e6e1f78dd67e164b3c2373cccf8d0b0105 SHA256 14fca665afe5a226223e9efac7e8f707e67b759105feeec954f9ad7108946234
 DIST xd3d-8.3.1.tar.gz 2188216 RMD160 78b3d6b457bce69e3525a1c654d7241df2f8d5c8 SHA1 9ab3c1c14e63434714e7e8022b6c1ab2366ede3d SHA256 f363cabec88fb5055fe86fb9973d7122e93dfd4a803517b9f90be18131ef8816
-EBUILD xd3d-8.3.1.ebuild 1138 RMD160 0aa5d7a2d3999af39a2248ce93289f4996a5df50 SHA1 ac971089628df282d8f07d2c75c91594d92afcd3 SHA256 a78aa741f280a8bea6adde79643908231762ff09c8250a821acd026d56d67836
-MISC ChangeLog 2295 RMD160 6e23f54ccab33b8fe4bde8fbe052b0469e1ac03b SHA1 57bda7cde942b985ccba39831433fe0975d1b1eb SHA256 de09deeb10560f3014221f5fc678ad8619f98970401ebb8fcc7d6b27b9998bd3
+EBUILD xd3d-8.3.1.ebuild 1134 RMD160 3f1703333ffe85326a1e876aa5b03f57bc11dfb2 SHA1 1e8e68f7f13e6c3e3a69fa4742eb83914454f6de SHA256 30c93529cc9434f56720697e79385766e8e5eafd7f4b27b9888e0a7bb889e8d5
+MISC ChangeLog 2393 RMD160 3bf1677064dc78e85ad7f00a68f032934fcab9fd SHA1 528bc216ce96c6180e0e1c1db6e62f1b9d33fd11 SHA256 2bf0acc4fd1a87cfcb2444536395188c40faed650bc3c8cae05fb1ff66290ee1
 MISC metadata.xml 614 RMD160 153dd760d702ef7f14cb2f2e73f0dcbd22c88646 SHA1 41535ad4d73196125d16049bc6a1c3ade1ea496c SHA256 18dec81f48b4dcf4a397189171483fabf4a1fabf0ad8d1dca013e20b138bd06c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksZZtoACgkQ1ycZbhPLE2CL4gCfTnV0Dmye5uip3CI3W7Xi5KbS
-VrsAnioSdrkJHJYVS18u9YVW2BvzMiiI
-=5cmx
+iEYEARECAAYFAktYX0sACgkQNQqtfCuFneOycQCeIKDgW3JL3/m/Z63iwIX3PrKN
+NVkAni8VAQQOiLTryFhcZ6jDpPxuY++F
+=XBnG
 -----END PGP SIGNATURE-----
